--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "dev": "  tsc -w",
-    "build": "tsc"
+    "build": "npm run build:js && npm run build:exe",
+    "build:js": "tsc",
+    "build:exe": "pkg ./js/main.js -o ./dist/shred"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,9 @@
   "homepage": "https://github.com/jhasselbring/filler#readme",
   "dependencies": {
     "@types/node": "^18.0.0",
-    "nodemon": "^2.0.18",
+    "check-disk-space": "^3.3.0",
+    "diskusage": "^1.1.3",
+    "pkg": "^5.7.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
